feat: added code exercise004 and refactored exercise002