@@ -7,7 +7,6 @@ import org.techreturners.mockdata.MockData;
 import java.io.IOException;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Exercise002 {
 
@@ -25,7 +24,7 @@ public class Exercise002 {
         System.out.println("Persons sorted by age: ");
         List<Person> people = MockData.getPeople();
         people.stream().sorted(Comparator.comparingInt(Person::age))
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(System.out::println);
     }
 
@@ -40,7 +39,7 @@ public class Exercise002 {
         System.out.println("Cars sorted alphabetically on make and then year: ");
         cars.stream()
                 .sorted(Comparator.comparing(Car::make).thenComparingInt(Car::year))
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(System.out::println);
     }
 
@@ -56,7 +55,7 @@ public class Exercise002 {
                 .filter(c -> c.colour().equalsIgnoreCase("red"))
                 .sorted((c1, c2) -> Double.compare(c2.price(), c1.price()))
                 .limit(10)
-                .collect(Collectors.toList())
+                .toList()
                 .forEach(System.out::println);
     }
 }
